--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,8 +75,8 @@
 							<center>
 							<div style="max-width:75%">
 
-							<div style="font-family:Source Sans Pro; font-size: 20px">September 9, 2022</div>
-							<div style="font-family:Source Sans Pro; font-size: 20px">3:30 PM–11:00 PM</div>
+							<div style="font-family:Source Sans Pro; font-size: 20px">September&nbsp;9,&nbsp;2022</div>
+							<div style="font-family:Source Sans Pro; font-size: 20px">3:30&nbsp;PM – 11:00&nbsp;PM</div>
 							<div style="font-family:Source Sans Pro; font-size: 20px">Celebration Farm (Double Round Barn)</div>
 							<div style="font-family:Source Sans Pro; font-size: 20px"><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE, Iowa City, IA, 52245</a></div>
 							<br/>
