--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,10 +75,12 @@
 							<center>
 							<div style="max-width:75%">
 
-							<div style="font-family:Source Sans Pro; font-size: 20px">September&nbsp;9,&nbsp;2022</div>
-							<div style="font-family:Source Sans Pro; font-size: 20px">3:30&nbsp;PM – 11:00&nbsp;PM</div>
-							<div style="font-family:Source Sans Pro; font-size: 20px">Celebration Farm (Double Round Barn)</div>
-							<div style="font-family:Source Sans Pro; font-size: 20px"><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE, Iowa City, IA, 52245</a></div>
+							<div style="font-family:Source Sans Pro; font-size: 22px">September&nbsp;9,&nbsp;2022</div>
+							<div style="font-family:Source Sans Pro; font-size: 22px">3:30&nbsp;PM – 11:00&nbsp;PM</div>
+							<div style="font-family:Source Sans Pro; font-size: 22px">The Celebration Farm</div>
+							<div style="font-family:Source Sans Pro; font-size: 22px">(Double Round Barn)</div>
+							<div style="font-family:Source Sans Pro; font-size: 22px"><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">4696 Robin Woods Lane NE</a></div>
+							<div style="font-family:Source Sans Pro; font-size: 22px"><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, IA, 52245</a></div>
 							<br/>
 
 							<h3 style="font-family:middleearthmedium;">Schedule</h3>
@@ -111,7 +113,7 @@
 							<p>Guests are encouraged to wear attire that fits a modern formal or black-tie optional dress code. Men should wear a suit with a shirt and tie or alternatively a suit jacket. Women should wear a floor-length gown, knee-length cocktail dress, a pantsuit, dressy separates, or other culturally appropriate attire. Alternatively, guests may wear medieval or renaissance period appropriate attire suitable for a prominent social gathering.</p>
 							
 							<h2 style="font-family:middleearthmedium;">Venue &amp; Lodging</h2>
-							<p><a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a> offers free day of (and overnight) parking. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids).</p>
+							<p>The <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a> offers free day of (and overnight) parking. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids).</p>
 							
 							<h2 style="font-family:middleearthmedium;">Important Remarks</h2>
 							
