--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -43,9 +43,11 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1 style="font-family:party_businessregular;">no admittance - except on party business</h1>
-							<iframe style="display:block;width:100%;height:640px;border:none;overflow:hidden;" 
-							          src="https://amberben.anrsvp.com/?embed=true">
-							</iframe>
+							<p class="major"Ready to RSVP or update your invitation?</p>
+							
+							<ul class="actions stacked">
+								<li><a href="https://amberben.anrsvp.com/" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Here</a></li>
+							</ul>
 						</div>
 						<div class="image">
 							<img src="images/rsvp.png" alt="" />
