--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,9 @@
 							<h2 style="font-family:middleearthmedium;">Your Presence is Requested</h2>
 							<p>We are hosting a celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Friday September 9th, 2022</u>. A vow renewal and wedding reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn.</p>
 							<p>We understand that not every guest will be able join us for this special occasion, but we invite you to settle down with us for a night of feasting, drinking, dancing, laughing, and the loving companionship of friends and family.</p>
-							<p>Please <a href="/rsvp" target="_blank">RSVP</a> your attendance before Monday, August 22nd 2022.</p>
+							<p>Please <a href="https://amberben.anrsvp.com/">RSVP</a> your attendance before Monday, August 22nd 2022.</p>
 							<ul class="actions stacked">
-								<li><a href="/rsvp" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
+								<li><a href="https://amberben.anrsvp.com/" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
 							</ul>
 						</div>
 						<div class="image">
