--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
 						</div>
 					</section>
 					
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="party-business">
 						<div class="inner">
 							<h2 style="font-family:middleearthmedium;">Vow Renewal &amp; Wedding Reception</h2>
 	
@@ -132,7 +132,7 @@
 						</div>
 					</section>
 
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="journey">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">An Unexpected Journey</h2>
 							<p>Ben and Amber met online in June 2014 just as it was becoming the norm for many. They set their first date across town at a local Irish restaurant. Ben had an unusually great day at work and even left early so he'd have plenty of time to show up early. However, on his way home his car broke down. Amber had a normal day of classes at University and was surprised to get a text from Ben saying that he was having his car towed to the mechanic and would be late. Thinking Ben was trying to get out of the date, she suggested that they postpone, but Ben insisted that he'd be able to make it. Ben decided to bicycle across town on that hot humid day and arrived for dinner late, sweaty, and off his "game".</p>
@@ -152,7 +152,7 @@
 						</div>
 					</section>
 					
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="winter">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="wedding">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">We Eloped!</h2>
 							<p>Not wanting to wait any longer, Ben and Amber decided to get married on their own. While they both wished their friends and family could have joined, their elopement ceremony offered a unique experience. In early October 2020, Amber and Ben rented a secluded cabin on a lake just outside of Shenandoah National Park. The night before the ceremony Ben and Amber each wrote their vows in a pair of handmade journals while enjoying the heat of a wood stove. Very early in the morning Ben cooked a bacon and egg breakfast from a cast iron skillet.</p>
@@ -162,7 +162,7 @@
 						</div>
 					</section>
 					
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="party-business">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="family">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">A New Family</h2>
 							<p>Ben and Amber got dressed and left to meet the photographer and officiant at the trail head of Blackrock Summit in the heart of Shenandoah National Park. The half hour drive through the park was made even more special by a heavy fog that blanketed the forest from the light rain the night before. After lighting two lanterns, the couple hiked a mile to the summit just in time for sunrise. Together, they read their vows to one another on the first day of their new lives together, both looking forward to their future role as parents.</p>
