--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -43,7 +43,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1 style="font-family:party_businessregular;">no admittance - except on party business</h1>
-							<p class="major">Please see <a href="/">our story</a> for event details.</p>
+							<p class="major">For event schedule and details, please see <a href="/">our story</a>.</p>
 							<p class="major">Ready to RSVP or update your invitation?</p>
 							
 							<ul class="actions stacked">
