--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,7 +96,7 @@
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">4:30&nbsp;PM – 5:30&nbsp;PM</td>
-							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Cocktail Hour</td>
+							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">Cocktail&nbsp;Hour &amp; Master&nbsp;Falconer</td>
 							  </tr>
 							  <tr style="border-bottom: 1px solid black; border-top: 1px solid black; background-color: #ffffff;">
 							    <td style="font-family:Source Sans Pro; font-size: 20px; text-align: center; vertical-align: middle;">5:30&nbsp;PM – 6:30&nbsp;PM</td>
@@ -111,6 +111,8 @@
 							
 							<h3 style="font-family:middleearthmedium;">Dress Attire: Hobbit Formal</h3>
 							<p>Guests are encouraged to wear attire that fits a modern formal or black-tie optional dress code. Men should wear a suit with a shirt and tie or alternatively a suit jacket. Women should wear a floor-length gown, knee-length cocktail dress, a pantsuit, dressy separates, or other culturally appropriate attire. Alternatively, guests may wear medieval or renaissance period appropriate attire suitable for a prominent social gathering.</p>
+							
+							<p>If you are interested in dressing up, see our <a href="attire">dress attire</a> page for some ideas and resources on medieval or renaissance period attire.</p>
 							
 							<h2 style="font-family:middleearthmedium;">Venue &amp; Lodging</h2>
 							<p>The <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a> offers free day of (and overnight) parking. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids).</p>
