added more resources

--- a/_layouts/attire.html
+++ b/_layouts/attire.html
@@ -57,15 +57,21 @@
 					<!-- Two -->
 					<section class="wrapper style1 align-center" id="formal">
 						<div class="inner">
+							<h2 style="font-family:middleearthmedium;">Outfit Changes</h3>
 							<p>Some guests have expressed a desire to bring two outfits, a modern formal wear and a historical outfit, with the intention of changing during or after the cocktail hour. The venue has large bathrooms that can accomondate outfit changes, so you are welcome to do whatever makes you most comfortable (committing to just a modern or historical outfit or changing through the evening).</p>
 	
-							<center>
-							<div style="max-width:75%">
-								
-								<p>TODO</p>
-
-							</div>
-							</center>
+							<h2 style="font-family:middleearthmedium;">Outfit Ideas</h3>
+							<p>If you are looking to procure an outfit for the evening you may consider the following resources.</p>
+							
+							<ul>
+								<li><a href="https://armstreet.com">armstreet.com</a> (Ben's engagement outfit was purchased from this vendor with a few adjustments from Amber)</li>
+								<li><a href="https://grimfrost.com">grimfrost.com</a> (Viking outfits and accessories for men and women)</li>
+								<li><a href="https://holyclothing.com">holyclothing.com</a> (outfits for women)</li>
+							</ul>
+							
+							<h2 style="font-family:middleearthmedium;">Homemade</h3>
+							<p><a href="https://www.etsy.com/search?q=medieval+tunic">Etsy</a> has many reputable vendors that sell a variety of unique outfits for both men and women.</p>
+							<p>For those wishing to make an outfit, cotton or linen fabric can be found in local fabric shops (e.g Joann fabric) or online (e.g. <a href="https://fabrics-store.com/all-fabrics?search=linen">fabrics-store.com</a> and <a href="https://www.fabricmartfabrics.com/linen-fabric/">fabricmartfabrics.com</a>). There are many patterns for women's dresses avaiable (e.g. https://www.amazon.com/dp/B000KH9PWW, https://www.amazon.com/dp/B000KH7LG4, https://www.amazon.com/dp/B000KHDSZM, https://www.amazon.com/dp/B07CG41MP2).</p>
 							
 						</div>
 					</section>
