--- a/_layouts/attire.html
+++ b/_layouts/attire.html
@@ -63,12 +63,7 @@
 							<h2 style="font-family:middleearthmedium;">Outfit Ideas</h3>
 							<p>If you are looking to procure an outfit for the evening you may consider the following resources. Most importantly have fun!</p>
 							
-							<p>Ben's engagement outfit was purchased from <a href="https://armstreet.com">armstreet.com</a> (with a few adjustments from Amber).</p>
-							<p><a href="https://grimfrost.com">grimfrost.com</a> has Viking outfits and accessories for men and women.</p>
-							<p><a href="https://holyclothing.com">holyclothing.com</a> has outfits for women.</p>
-							
-							<h2 style="font-family:middleearthmedium;">Homemade</h3>
-							<p><a href="https://www.etsy.com/search?q=medieval+tunic">Etsy</a> has many reputable vendors that sell a variety of unique outfits for both men and women. For those wishing to make their own outfit, cotton or linen fabric can be found in local fabric shops (e.g Joann fabric) or online (e.g. <a href="https://fabrics-store.com/all-fabrics?search=linen">fabrics-store.com</a> and <a href="https://www.fabricmartfabrics.com/linen-fabric/">fabricmartfabrics.com</a>). There are many patterns for women's dresses avaiable (e.g. <a href="https://www.amazon.com/dp/B000KH9PWW">pattern 1</a>,  <a href="https://www.amazon.com/dp/B000KH7LG4">pattern 2</a>, <a href="https://www.amazon.com/dp/B000KHDSZM">pattern 3</a>, <a href="https://www.amazon.com/dp/B07CG41MP2">pattern 4</a>).</p>
+							<p>Ben's engagement outfit was purchased from <a href="https://armstreet.com">armstreet.com</a> (with a few adjustments from Amber). <a href="https://grimfrost.com">grimfrost.com</a> has Viking outfits and accessories for men and women. <a href="https://holyclothing.com">holyclothing.com</a> has outfits for women. <a href="https://www.etsy.com/search?q=medieval+tunic">Etsy</a> has many reputable vendors that sell a variety of unique outfits for both men and women. For those wishing to make their own outfit, cotton or linen fabric can be found in local fabric shops (e.g Joann fabric) or online (e.g. <a href="https://fabrics-store.com/all-fabrics?search=linen">fabrics-store.com</a> and <a href="https://www.fabricmartfabrics.com/linen-fabric/">fabricmartfabrics.com</a>). There are many patterns for women's dresses avaiable (e.g. <a href="https://www.amazon.com/dp/B000KH9PWW">pattern 1</a>,  <a href="https://www.amazon.com/dp/B000KH7LG4">pattern 2</a>, <a href="https://www.amazon.com/dp/B000KHDSZM">pattern 3</a>, <a href="https://www.amazon.com/dp/B07CG41MP2">pattern 4</a>).</p>
 							
 						</div>
 					</section>
