--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -115,7 +115,7 @@
 							<p>If you are interested in dressing up, see our <a href="attire">dress attire</a> page for some ideas and resources on medieval or renaissance period attire.</p>
 							
 							<h2 style="font-family:middleearthmedium;">Venue &amp; Lodging</h2>
-							<p>The <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a> offers free day of (and overnight) parking. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids).</p>
+							<p>The <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Celebration Farm</a> offers free day of (and overnight) parking. For guests attending from out of town or for local guests wishing to lodge closer to the venue, please note that the weekend coincides with the Iowa / Iowa State Football game in Iowa City so lodging in the area will be subject to higher rates and restricted availability. <b>It is highly encouraged to book accommodations early.</b> Guests may wish to consider hotel options outside of Iowa City (e.g. Cedar Rapids). The venue has reccommended the <a href="https://goo.gl/maps/4qwEVf1g4YUTJmcM6">Sleep Inn &amp; Suites</a> in Mount Vernon, IA as a close and affordable lodging with availability.</p>
 							
 							<h2 style="font-family:middleearthmedium;">Important Remarks</h2>
 							
