--- a/_layouts/rsvp.html
+++ b/_layouts/rsvp.html
@@ -44,11 +44,7 @@
 						<div class="content">
 							<h1 style="font-family:party_businessregular;">no admittance - except on party business</h1>
 							<p class="major">For event schedule and details, please see <a href="/">our story</a>.</p>
-							<p class="major">Ready to RSVP or update your invitation?</p>
-							
-							<ul class="actions stacked">
-								<li><a href="https://amberben.anrsvp.com/" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
-							</ul>
+							<p class="major">Need to update your RSVP? Please email: <a href="mailto:rsvp@uniteourhouses.com">rsvp@uniteourhouses.com</a></p>
 						</div>
 						<div class="image">
 							<img src="images/rsvp.png" alt="" />
