--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,11 +57,9 @@
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">Your Presence is Requested</h2>
 							<p>We are hosting a celebration feast to be held in <a href="https://goo.gl/maps/x2HvM5u7aTsq9YVN6">Iowa City, Iowa</a> on <u>Friday September 9th, 2022</u>. A vow renewal and wedding reception will be held at the <a href="https://www.thecelebrationfarm.com/">Celebration Farm</a> in the Double Round Barn.</p>
-							<p>We understand that not every guest will be able join us for this special occasion, but we invite you to settle down with us for a night of feasting, drinking, dancing, laughing, and the loving companionship of friends and family.</p>
-							<p>Please <a href="https://amberben.anrsvp.com/">RSVP</a> your attendance before Monday, August 22nd 2022.</p>
-							<ul class="actions stacked">
-								<li><a href="https://amberben.anrsvp.com/" class="button big wide smooth-scroll-middle" style="font-family:middleearthmedium;">RSVP Online</a></li>
-							</ul>
+							<p><b>RSVPs CLOSED:</b> RSVPs are no longer being accepted. In the event you can no longer attend or need to update your RSVP please kindly email the host directly at <a href="mailto:rsvp@uniteourhouses.com">rsvp@uniteourhouses.com</a> as soon as possible.</p>
+							<p><b>IMPORTANT:</b> Reminder if you feel symptomatic or test positive for COVID please do not attend! While you will be missed the safety of all guests is our priority.</p>
+							<p>We are excited to share a night of feasting, drinking, dancing, laughing, and the loving companionship of friends and family.</p>
 						</div>
 						<div class="image">
 							<img src="images/hands.png" alt="" />
