--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -155,7 +155,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="wedding">
 						<div class="content">
 							<h2 style="font-family:middleearthmedium;">We Eloped!</h2>
-							<p>Not wanting to wait any longer, Ben and Amber decided to get married on their own. While they both wished their friends and family could have joined, their elopement ceremony offered a unique experience. In early October 2020, Amber and Ben rented a secluded cabin on a lake just outside of Shenandoah National Park. The night before the ceremony Ben and Amber each wrote their vows in a pair of handmade journals while enjoying the heat of a wood stove. Very early in the morning Ben cooked a bacon and egg breakfast from a cast iron skillet.</p>
+							<p>Not wanting to wait any longer, Ben and Amber decided to get married on their own. While they both wished their friends and family could have joined, <a href="https://www.whitesailscreative.com/blog/2020/11/13/sunrise-elopement-in-shenandoah-national-park-in-the-fall-black-rock-hike">their elopement ceremony</a> offered a unique experience. In early October 2020, Amber and Ben rented a secluded cabin on a lake just outside of Shenandoah National Park. The night before the ceremony Ben and Amber each wrote their vows in a pair of handmade journals while enjoying the heat of a wood stove. Very early in the morning Ben cooked a bacon and egg breakfast from a cast iron skillet.</p>
 						</div>
 						<div class="image">
 							<img src="images/lanterns.png" alt="" />
